[gd_scene load_steps=4 format=2]

[ext_resource path="res://fallen_gate/gate.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 81.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 73, 82 )

[node name="Gate" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 518, 291 )
shape = SubResource( 1 )

[node name="Gate_Wall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate_Wall"]
position = Vector2( 518, 292 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Gate_Wall" to="." method="_on_right_side_area_entered"]
[connection signal="area_exited" from="Gate_Wall" to="." method="_on_right_side_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
